--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "lodash.shuffle": "^4.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-flipcard": "^0.2.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
